--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -1,9 +1,11 @@
 .main-container__loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
+    z-index: 15;
+    margin: auto;
+    position: absolute;
+    top: 380px;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
     animation: fadeOut 1s linear 1s forwards;
 
