--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -67,6 +67,7 @@ li {
 }
 
 body {
+  height: 100vh;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
@@ -74,6 +75,31 @@ body {
   text-align: center;
   font-family: $font4;
   font-size: 1rem;
+
+
+  &::before {
+    content: "";
+    z-index: 3;
+    position: absolute;
+    opacity: 0.5;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: $gradient1;
+
+    animation: globalAnim 3s ease-in-out forwards;
+    animation-delay: 0.9s;
+
+    @keyframes globalAnim {
+      100% {
+        opacity: 0;
+        z-index: -1;
+      }
+
+    }
+  }
+
 }
 
 img {
