--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -1,183 +1,196 @@
-.main-container {}
-
-img {
-  width: 100%;
+.main-container {
+  @extend %all-center;
 
 
-}
-
-.menus-container {
-  background: $grey1;
-  border-radius: 40px 40px 0px 0px;
-  margin-top: 63px;
-
-}
-
-.main-container__img {
-  width: 100%;
-  position: absolute;
-  top: 70px;
-  z-index: -1;
-}
-
-.menus-container__name {
-  position: relative;
-  padding: 25px 10px 0;
-  align-items: center;
-  display: flex;
-
-  .fa-regular {
-    @include absolute-el(50%, 0%, 0%, 80%, 0%, 0%);
-    font-size: 1.5rem;
-  }
-
-  .fa-solid {
-    @include absolute-el(50%, 0%, 0%, 80%, 0%, 0%);
-    font-size: 1.5rem;
-
-    opacity: 0;
-    color: transparent;
-    background-clip: text;
-
-    transition: all 1s ease-in-out;
-    background-image: $gradient2;
-
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
-
-.menus-container__name h1 {
-  font-family: $font1;
-  font-weight: 200;
-  font-size: 1.75rem;
-  margin-right: 20px;
-}
-
-
-
-.menus-container__title {
-  flex-direction: column;
-  display: flex;
-  gap: 5px;
-}
-
-.menus-container__title h2 {
-  padding: 25px 10px 0 10px;
-  text-align: left;
-  font-family: $font3;
-  font-size: 1rem;
-  text-transform: uppercase;
-  position: relative;
-
-
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: -5px;
-    background: $green1;
-    height: 3px;
-    width: 35px;
-  }
-}
-
-
-
-
-.menus-container__cards_title {
-  line-height: 25px;
-  text-align: left;
-  padding: 0 10px;
-  overflow: hidden;
-  width: 70%;
-  transition: all ease-in-out 0.4s;
-
-  h3 {
-
-    font-size: 1.125rem;
-  }
-}
-
-.menus-container__cards_title__text {
-
-  white-space: nowrap;
-  transition: all ease-in-out 0.4s;
-}
-
-.menus-container__cards {
-  position: relative;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  overflow: hidden;
-  background: white;
-  height: 69px;
-  border-radius: 15.0431px;
-  margin: 10px;
-  gap: 5px;
-  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-
-
-  .menus-container__cards_content__price__anim {
-    background: $green1;
+  img {
     width: 100%;
+
+
   }
 
-  &:hover {
-    .menus-container__cards_content__price {
-      transform: translateX(0);
-    }
+  .menus-container {
+    background: $grey1;
+    border-radius: 40px 40px 0px 0px;
+    margin-top: 63px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 
-    .menus-container__cards_title__text {
-      overflow: hidden;
-      text-overflow: ellipsis;
+
+
+  }
+
+  .main-container__img {
+
+    width: 100%;
+    position: absolute;
+    top: 70px;
+    z-index: -1;
+
+    img {
+      height: 383px;
     }
   }
 
-  .menus-container__cards_content {
-    height: 100%;
+  .menus-container__name {
+    position: relative;
+    padding: 25px 10px 0;
+    align-items: center;
+    display: flex;
 
+    .fa-regular {
+      @include absolute-el(50%, 0%, 0%, 80%, 0%, 0%);
+      font-size: 1.5rem;
+    }
 
+    .fa-solid {
+      @include absolute-el(50%, 0%, 0%, 80%, 0%, 0%);
+      font-size: 1.5rem;
 
+      opacity: 0;
+      color: transparent;
+      background-clip: text;
 
-    p {
-      font-family: $font5;
-      font-size: 0.94rem;
+      transition: all 1s ease-in-out;
+      background-image: $gradient2;
 
-
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 
-  .menus-container__cards_content__price {
+  .menus-container__name h1 {
+    font-family: $font1;
+    font-weight: 200;
+    font-size: 1.75rem;
+    margin-right: 20px;
+  }
+
+
+
+  .menus-container__title {
+    flex-direction: column;
+    display: flex;
+    gap: 5px;
+  }
+
+  .menus-container__title h2 {
+    padding: 25px 10px 0 10px;
+    text-align: left;
+    font-family: $font3;
+    font-size: 1rem;
+    text-transform: uppercase;
+    position: relative;
+
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -5px;
+      background: $green1;
+      height: 3px;
+      width: 35px;
+    }
+  }
+
+
+
+
+  .menus-container__cards_title {
+    line-height: 25px;
+    text-align: left;
+    padding: 0 10px;
+    overflow: hidden;
+    width: 70%;
+    transition: all ease-in-out 0.4s;
+
+    h3 {
+
+      font-size: 1.125rem;
+    }
+  }
+
+  .menus-container__cards_title__text {
+
+    white-space: nowrap;
+    transition: all ease-in-out 0.4s;
+  }
+
+  .menus-container__cards {
+    position: relative;
 
     display: flex;
-    align-items: flex-end;
-    width: 60%;
-    height: 100%;
-    transform: translateX(65px);
-    transition: all 0.8s;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    background: white;
+    height: 69px;
+    border-radius: 15.0431px;
+    margin: 10px;
+    gap: 5px;
+    box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
 
 
-    .fa-circle-check {
-      color: white;
+    .menus-container__cards_content__price__anim {
+      background: $green1;
+      width: 100%;
     }
 
+    &:hover {
+      .menus-container__cards_content__price {
+        transform: translateX(0);
+      }
 
+      .menus-container__cards_title__text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
 
-    span {
-      margin-left: 30px;
-      border-radius: 0 15px 15px 0;
-      padding: 0 15px;
-      width: 100%;
+    .menus-container__cards_content {
       height: 100%;
+
+
+
+
+      p {
+        font-family: $font5;
+        font-size: 0.94rem;
+
+
+      }
+    }
+
+    .menus-container__cards_content__price {
+
       display: flex;
-      justify-content: center;
-      align-items: center;
+      align-items: flex-end;
+      width: 60%;
+      height: 100%;
+      transform: translateX(65px);
+      transition: all 0.8s;
+
+
+      .fa-circle-check {
+        color: white;
+      }
 
 
 
+      span {
+        margin-left: 30px;
+        border-radius: 0 15px 15px 0;
+        padding: 0 15px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+
+      }
     }
   }
 }
