--- a/scss/layouts/_restaurants-section.scss
+++ b/scss/layouts/_restaurants-section.scss
@@ -2,13 +2,16 @@
   background: $grey2;
   padding-bottom: 60px;
 
+
+
   @media screen and (min-width: 1224px) {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
   }
+
+
 
   .restaurants-section__cards-container {
     display: flex;
@@ -16,37 +19,40 @@
     gap: 35px;
     position: relative;
 
-    @media screen and (min-width: 1224px) {
 
+    @media screen and (min-width: 780px) {
       max-width: 1080px;
       display: grid;
-      gap: 90px;
 
       grid-template-columns: 50% 50%;
-      grid-template-rows: 1fr 1fr;
+      grid-template-rows: auto;
       grid-template-areas:
+        "ttl ttl"
         "lpg lne"
         "alf lds";
+    }
 
-      #lne {
-        grid-area: lne;
-      }
 
-      #alf {
-        grid-area: alf;
-      }
+    #lne {
+      grid-area: lne;
+    }
 
-      #lds {
-        grid-area: lds;
-      }
+    #alf {
+      grid-area: alf;
+    }
+
+    #lds {
+      grid-area: lds;
     }
   }
 
   h3 {
+    padding-bottom: 0;
     @include h-title;
     grid-area: ttl;
 
   }
+
 
   .restaurants-section__cards-container img {
     border-radius: 30px 30px 0 0;
@@ -86,6 +92,8 @@
       width: 490px;
     }
   }
+
+
 
   h4 {
     padding-left: 30px;
