--- a/scss/layouts/_restaurants-section.scss
+++ b/scss/layouts/_restaurants-section.scss
@@ -20,10 +20,10 @@
     position: relative;
 
 
-    @media screen and (min-width: 780px) {
+    @media screen and (min-width: 1224px) {
       max-width: 1080px;
       display: grid;
-
+      justify-items: center;
       grid-template-columns: 50% 50%;
       grid-template-rows: auto;
       grid-template-areas:
