--- a/scss/index.css
+++ b/scss/index.css
@@ -47,7 +47,24 @@ body {
   font-family: Roboto-Medium;
   font-size: 1rem;
 }
-body::before {
+
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.main-container__loader {
+  z-index: 15;
+  margin: auto;
+  position: absolute;
+  top: 380px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-animation: fadeOut 1s linear 1s forwards;
+          animation: fadeOut 1s linear 1s forwards;
+}
+.main-container__loader::before {
   content: "";
   z-index: 3;
   position: fixed;
@@ -73,23 +90,6 @@ body::before {
     opacity: 0;
     z-index: -1;
   }
-}
-
-img {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.main-container__loader {
-  z-index: 15;
-  margin: auto;
-  position: absolute;
-  top: 380px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-animation: fadeOut 1s linear 1s forwards;
-          animation: fadeOut 1s linear 1s forwards;
 }
 .main-container__loader .loader {
   margin: auto;
@@ -343,6 +343,7 @@ header .header__logo {
 }
 header .header__logo img {
   width: 50%;
+  max-width: 200px;
 }
 header .header__loc {
   background: #ebebea;
@@ -376,6 +377,11 @@ header .header__pages i {
   font-family: Roboto-Bold;
   font-size: 1.5rem;
 }
+@media screen and (min-width: 1024px) {
+  .search-section h1 {
+    font-size: 2.5rem;
+  }
+}
 .search-section p {
   font-family: Roboto-light;
   font-size: 1.1rem;
@@ -385,6 +391,17 @@ header .header__pages i {
 .choose-section {
   margin-bottom: 60px;
   position: relative;
+}
+@media screen and (min-width: 1224px) {
+  .choose-section {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .choose-section h2 {
   padding-bottom: 0;
@@ -414,14 +431,13 @@ header .header__pages i {
 @media screen and (min-width: 1224px) {
   .choose-section nav {
     display: grid;
-    grid-template-columns: 25% 25% 25%;
+    grid-template-columns: 33% 33% 33%;
     grid-template-rows: 1fr 1fr;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
     gap: 20px;
     grid-template-areas: "ttl ttl ttl" "cho com deg";
-    justify-content: center;
   }
   .choose-section nav h2 {
     grid-area: ttl;
@@ -513,10 +529,11 @@ header .header__pages i {
   .restaurants-section .restaurants-section__cards-container {
     max-width: 1080px;
     display: grid;
-    justify-items: center;
+    justify-items: start;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
     grid-template-areas: "ttl ttl" "lpg lne" "alf lds";
+    grid-column-gap: 100px;
   }
 }
 .restaurants-section .restaurants-section__cards-container #lne {
@@ -535,9 +552,10 @@ header .header__pages i {
   text-align: left;
   padding: 30px 20px;
   grid-area: ttl;
+  padding-left: 10px;
 }
 .restaurants-section .restaurants-section__cards-container img {
-  border-radius: 30px 30px 0 0;
+  border-radius: 40px 40px 0 0;
   padding: 20px 10px 0;
   width: 100%;
   height: 251px;
@@ -823,13 +841,22 @@ footer {
   background: #343435;
   color: white;
   display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   justify-items: start;
   grid-template-columns: 1fr;
   grid-template-rows: 30% 70%;
-  padding: 30px;
+  padding: 0 30px;
+}
+footer h5 {
+  font-family: Shrikhand;
+  font-size: 1.125rem;
+  margin: 30px 0 20px;
 }
 @media screen and (min-width: 1224px) {
   footer {
+    padding-top: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -840,14 +867,14 @@ footer {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    gap: 150px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 50px;
     height: 114px;
   }
   footer h5 {
-    margin-right: 20px;
+    margin: 0 70px 0 90px;
   }
 }
 footer .partnership {
@@ -856,6 +883,7 @@ footer .partnership {
   display: flex;
 }
 footer .partnership ul {
+  line-height: 30px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -867,8 +895,10 @@ footer .partnership ul {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  gap: 40px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+}
+footer .partnership ul .partnership__visu {
+  margin-right: 25px;
 }
 footer .partnership ul #ustensils,
 footer .partnership ul #handshake {
