--- a/scss/layouts/_choose-section.scss
+++ b/scss/layouts/_choose-section.scss
@@ -3,6 +3,13 @@
   position: relative;
 
 
+  @media screen and (min-width:1224px) {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+
 
   h2 {
 
@@ -31,10 +38,11 @@
 
 
     @media screen and (min-width: 1224px) {
+
       display: grid;
-      grid-template-columns: 25% 25% 25%;
+      grid-template-columns: 33% 33% 33%;
       grid-template-rows: 1fr 1fr;
-      justify-content: center;
+      justify-content: start;
       gap: 20px;
       grid-template-areas:
         "ttl ttl ttl"
@@ -44,7 +52,7 @@
         grid-area: ttl;
       }
 
-      justify-content: center;
+
     }
   }
 
