--- a/scss/layouts/_restaurants-section.scss
+++ b/scss/layouts/_restaurants-section.scss
@@ -23,13 +23,14 @@
     @media screen and (min-width: 1224px) {
       max-width: 1080px;
       display: grid;
-      justify-items: center;
+      justify-items: start;
       grid-template-columns: 50% 50%;
       grid-template-rows: auto;
       grid-template-areas:
         "ttl ttl"
         "lpg lne"
         "alf lds";
+      grid-column-gap: 100px;
     }
 
 
@@ -50,12 +51,12 @@
     padding-bottom: 0;
     @include h-title;
     grid-area: ttl;
-
+    padding-left: 10px;
   }
 
 
   .restaurants-section__cards-container img {
-    border-radius: 30px 30px 0 0;
+    border-radius: 40px 40px 0 0;
     padding: 20px 10px 0;
     width: 100%;
     height: 251px;
