--- a/scss/layouts/_search-section.scss
+++ b/scss/layouts/_search-section.scss
@@ -7,7 +7,13 @@
     padding-bottom: 15px;
     font-family: $font5;
     font-size: 1.5rem;
+
+    @media screen and (min-width:1024px) {
+      font-size: 2.5rem;
+
+    }
   }
+
   p {
     font-family: $font3;
     font-size: 1.1rem;
