--- a/scss/applets/_header.scss
+++ b/scss/applets/_header.scss
@@ -23,19 +23,51 @@ header {
     height: 50px;
   }
 
+  #header__loc__imput {
+
+    border: 1px;
+    background: none;
+    font-family: $font4;
+    font-size: 1rem;
+    border-color: red;
+
+    &::placeholder {
+      color: $black;
+    }
+  }
+
   .header__loc i {
-    padding-right: 10px;
+    padding: 0 10px 3px 0;
   }
+}
 
-  .header__pages {
-    width: 100%;
-    @extend %all-center;
+.header__pages {
+  width: 100%;
+  height: 64px;
+  align-items: baseline;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 150px;
+
+  .header__pages__logo {
+    justify-content: center;
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 150px;
+    padding: 15px;
+
+    i {
+      @include absolute-el(28px, auto, auto, 25px, auto, auto)
+    }
   }
 
-  .header__pages i {
-    padding-left: 10px;
+  .header__pages__logo img {
+    width: 50%;
+  }
+
+  @media screen and (min-width: 768px) {
+
+    .header__pages__logo img,
+    .header__pages__logo i {
+      display: none;
+    }
   }
 }
